<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.HomeActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/txtTitre"
        android:textColor="@color/purple"
        android:textSize="30sp" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:id="@+id/txtPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/txtPlayer1"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/txtNomPlayer1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:hint="@string/txtNom"
                android:textStyle="bold"
                android:inputType="text" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txtPlayer2"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/txtNomPlayer2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:hint="@string/txtNom"
                android:textStyle="bold"
                android:inputType="text" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/btnJouer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_customized_form"
        android:layout_gravity="center"
        android:text="@string/txtJouer"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>