<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/txtTurnPlayer1"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/player_turn_form"
            android:textColor="@color/white"
            android:text="Player1"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/txtTurnPlayer2"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="30dp"
            android:background="@drawable/player_turn_form"
            android:textColor="@color/white"
            android:text="Player2"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/txtTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/txtTitre"
        android:textColor="@color/purple"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/txtTexte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/txtTexte"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp">
        <EditText
            android:id="@+id/txtNombre"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="150dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autofillHints=""
            android:hint="@string/txtNombre"
            android:inputType="number" />
        <Button
            android:id="@+id/btnComparer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/txtComparer"
            app:backgroundTint="@color/green" />
    </LinearLayout>
    <TextView
        android:id="@+id/txtResultat"
        android:textStyle="bold"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/darkGreen"
        android:textSize="24sp" />
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp">
        <Button
            android:id="@+id/btnRetour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txtRetour"
            app:backgroundTint="@color/green" />
        <Button
            android:id="@+id/btnRejouer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="@string/txtRejouer"
            app:backgroundTint="@color/green" />
    </LinearLayout>

</LinearLayout>
